# coding_problems

./: .gitignore  main.py  pyproject.toml
MITx_6.00.1x/code/: scrap.py  true_false.py
MITx_6.00.1x/code/lecture_code/: Lec4-iterativePower.py  Lec5-isPalindrome.py  Lec5-recursionMul.py  Lec6-removeDups.py  fibonacci.py  lec3.5.2_approximation_methods.py  lec3.6.2-bisection_search.py  lec5_Factorial.py  lec5_fibonacci_metered.py  lecture11-coordinate.py
MITx_6.00.1x/code/lecture_work/: iterPower.py  l4_isVowel.py  l4_p5_clip.py  lenRecur.py  semordnilap.py
MITx_6.00.1x/code/ps1/: count_bob.py  count_vowels.py  find_longest_sequence.py
MITx_6.00.1x/code/ps2/: bisection.py  pay_minimum.py  pay_one_year.py  pay_one_year_bisection.py
MITx_6.00.1x/code/ps3/: getAvailableLetters.py  getGuessedWord.py  hangman1.py  hangman2.py  isWordGuessed.py  radiationExposure.py
MITx_6.00.1x/code/quiz/: p3-1_found_it.py  p4_myLog.py  p5_laceStrings.py  p6_laceStringsRecur.py  p7_McNuggets.py  p8_1_fixedPoint.py  p8_2_sqrt.py  p8_3_babylon.py
accounts_app/: data.py
accounts_app/tests/: test_app.py
acme/: employees.csv
acme/acme/: models.py  tests.py
acme/acme/migrations/: 0001_initial.py
acme/config/: settings.py
blog_liker/: pyproject.toml
blog_liker/accounts/: admin.py
blog_liker/accounts/migrations/: 0001_initial.py
blog_liker/blogger/: admin.py  models.py  urls.py  views.py
blog_liker/blogger/management/commands/: create_users.py  generate_blog_data.py
blog_liker/blogger/migrations/: 0001_initial.py
blog_liker/config/: settings.py  urls.py
blog_liker/templates/: _base.html
blog_liker/templates/account/email/: password_reset_key_message.txt
blog_liker/templates/blogger/: blog_detail.html  blogs.html
blog_liker/templates/partials/: footer.html
coding/: account_global.py  coding.py  compare_lists.py  config.json  count_lines_words.py  find_smallest_interval.py  generate_list.py  global_api.py  global_variable.py  inputter.py  list_comp.py  list_practise.py  list_stuff.py  make_dict.py  scoping.py  variable_scope.py  words.txt
list_comprehension/: list_comprehension_practice.py  main.py  sopranos_users.csv
problem_sets/: axis_np.py  floor_ceil_rint.py  get_capt_room.py  numpy_stuff.py  problem.py  scrap.py  set_sym.py  sum_product.py  unique_value.py  vowels.py
slicing/: slicing.py
sql/: Employees  Integrity_Constraints.sql  create_emp_table.sql  credit_limit.sql  employees.csv  lunches.sql  lunches_create_tables.sql  lunches_data.sql  min_max.sql  null_employees.sql  sum_avg.sql  ten_rating.sql
threading_multiprocessing/: asyncIO_ex.py  asyncio_data.py  multiprocessing_ex.py  threading_ex.py
